[gd_scene load_steps=20 format=2]

[ext_resource path="res://imports/white_and_gray_sprites/WhiteSprites/white_hit_1.png" type="Texture" id=1]
[ext_resource path="res://imports/white_and_gray_sprites/WhiteSprites/white_hit_2.png" type="Texture" id=2]
[ext_resource path="res://imports/white_and_gray_sprites/WhiteSprites/white_hit_3.png" type="Texture" id=3]
[ext_resource path="res://imports/white_and_gray_sprites/WhiteSprites/white_hurt_hit.png" type="Texture" id=4]
[ext_resource path="res://imports/white_and_gray_sprites/WhiteSprites/white_hurt_idle.png" type="Texture" id=5]
[ext_resource path="res://imports/white_and_gray_sprites/WhiteSprites/white_idle.png" type="Texture" id=6]
[ext_resource path="res://imports/white_and_gray_sprites/GraySprites/gray_hit_1.png" type="Texture" id=7]
[ext_resource path="res://imports/Goku-Black-PNG-Transparent-Image.png" type="Texture" id=8]
[ext_resource path="res://imports/asset art.png" type="Texture" id=9]
[ext_resource path="res://imports/white_and_gray_sprites/GraySprites/gray_hit_3.png" type="Texture" id=10]
[ext_resource path="res://imports/white_and_gray_sprites/GraySprites/gray_idle.png" type="Texture" id=11]
[ext_resource path="res://imports/white_and_gray_sprites/GraySprites/gray_hit_2.png" type="Texture" id=12]
[ext_resource path="res://imports/white_and_gray_sprites/GraySprites/gray_hurt_hit.png" type="Texture" id=13]
[ext_resource path="res://imports/white_and_gray_sprites/GraySprites/gray_hurt_idle.png" type="Texture" id=14]
[ext_resource path="res://player/player_camera_controller.gd" type="Script" id=15]
[ext_resource path="res://scenes/fight_scene/character_animator_controller.gd" type="Script" id=16]
[ext_resource path="res://imports/white_and_gray_sprites/WhiteSprites/white_power_up_1.png" type="Texture" id=17]
[ext_resource path="res://imports/white_and_gray_sprites/GraySprites/gray_power_up_1.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 18 ) ],
"loop": true,
"name": "gray",
"speed": 0.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 17 ) ],
"loop": true,
"name": "white",
"speed": 0.0
} ]

[node name="FightSprites" type="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
script = ExtResource( 15 )

[node name="WordArtAsset" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 9 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="CameraStand" type="Spatial" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 109.932, 0 )

[node name="CharacterCamera" type="Camera" parent="Viewport/CameraStand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.27 )
cull_mask = 1047554
fov = 50.7
size = 10.0

[node name="Animator_controller" type="Spatial" parent="Viewport/CameraStand/CharacterCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.302, 0, -21.2797 )
script = ExtResource( 16 )

[node name="PlayerOneAnim" type="AnimatedSprite3D" parent="Viewport/CameraStand/CharacterCamera/Animator_controller"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 15 )
layers = 3
frames = SubResource( 1 )
animation = "gray"

[node name="PlayerTwoAnim" type="AnimatedSprite3D" parent="Viewport/CameraStand/CharacterCamera/Animator_controller"]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 15 )
layers = 3
frames = SubResource( 1 )
animation = "gray"

[node name="PlayerTwoTimer" type="Timer" parent="Viewport/CameraStand/CharacterCamera/Animator_controller"]
wait_time = 0.1

[node name="PlayerOneTimer" type="Timer" parent="Viewport/CameraStand/CharacterCamera/Animator_controller"]
wait_time = 0.1

[node name="DebugSprites" type="Sprite3D" parent="Viewport/CameraStand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.302, 0, -10.1392 )
visible = false
layers = 2
texture = ExtResource( 8 )
